welcome page template

--- a/index.html
+++ b/index.html
@@ -23,20 +23,46 @@
             <!-- banner middle -->
             <div id="bannerMiddle">
                 <ul class="navigation">
-                    <li><a class="heading" href="./index.html">Home</a></li>
-                    <li><a class="heading" href="./index.html">About</a></li>
-                    <li><a class="heading" href="./index.html">Projects</a></li>
-                    <li><a class="heading" href="./index.html">Contact</a></li>
+                    <li><a class="heading" href="#welcome">Home</a></li>
+                    <li><a class="heading" href="#mainContent">About</a></li>
+                    <li><a class="heading" href="#mainContent">Projects</a></li>
+                    <li><a class="heading" href="#mainContent">Contact</a></li>
                 </ul>
             </div>
 
             <!-- banner right -->
             <div id="bannerRight">
-                <a href="./index.html"> <h3> Sign Up </h3> </a> 
-                <a href="./index.html"> <h3> Sign In </h3> </a> 
+                <a href="https://github.com/zenginerler"> <h3> GitHub</h3> </a> 
+                <a href="https://www.linkedin.com/in/zenginerler/"> <h3> LinkedIn </h3> </a> 
             </div>
         </div>
     </header>
+
+    <section id="welcome">
+        <div class="welcome_content">
+
+            <h1 id="welcome_title"> I'm Mehmet Yavuz Zenginerler </h1>
+
+            <h2 id="welcome_message">
+                I was once a military student, then a psychology student, now I'm trying to be a Full Stack Developer.
+                If you are interested in learning how I ended up here, keep scrolling! --- draft
+                <!-- These sentences will definitely be replaced (!)-->
+            </h2>
+
+            <div class="social_media_links">
+                <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
+                <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
+                <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+            </div>
+
+        </div> <!-- end s-hero__content-about -->
+    </section>
+
+
+
 
     <div id="mainContent">
         <div class="contentContainer">
