add smooth scroll

--- a/index.html
+++ b/index.html
@@ -14,27 +14,30 @@
 <body>
     <header>
         <div class="banner">
-            <!-- banner left -->
+
             <div id="bannerLeft">
                 <a href="./index.html"><img id="logo" src="./data/tempLogo.jpg" alt="SoundscapeLogo"></a>
                 <span id="name"> Zenginerler </span>
             </div>
 
-            <!-- banner middle -->
             <div id="bannerMiddle">
                 <ul class="navigation">
                     <li><a class="heading" href="#welcome">Home</a></li>
-                    <li><a class="heading" href="#mainContent">About</a></li>
+                    <li><a class="heading" href="#aboutMe">About</a></li>
                     <li><a class="heading" href="#mainContent">Projects</a></li>
                     <li><a class="heading" href="#mainContent">Contact</a></li>
                 </ul>
             </div>
 
-            <!-- banner right -->
             <div id="bannerRight">
-                <a href="https://github.com/zenginerler"> <h3> GitHub</h3> </a> 
-                <a href="https://www.linkedin.com/in/zenginerler/"> <h3> LinkedIn </h3> </a> 
+                <a href="https://github.com/zenginerler">
+                    <h3> GitHub</h3>
+                </a>
+                <a href="https://www.linkedin.com/in/zenginerler/">
+                    <h3> LinkedIn </h3>
+                </a>
             </div>
+
         </div>
     </header>
 
@@ -50,19 +53,25 @@
             </h2>
 
             <div class="social_media_links">
-                <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                <div class="rotator"><a href="mailto:myz@utexas.edu"> E-mail </a></div>
+                <div class="rotator"><a href="https://github.com/zenginerler"> Github </a></div>
+                <div class="rotator"><a href="https://www.linkedin.com/in/zenginerler/"> Linkedin </a></div>
             </div>
 
-        </div> <!-- end s-hero__content-about -->
+        </div>
     </section>
 
+    <section id="aboutMe">
+        <div class="aboutMe_content">
 
+            <h3> About Me: </h3>
+            <br>
+            <p>
+                Hello There!
+            </p>
 
+        </div>
+    </section>
 
     <div id="mainContent">
         <div class="contentContainer">
@@ -194,10 +203,9 @@
             &copy; <a href="https://www.linkedin.com/in/zenginerler/"> LinkedIn </a>
             &bull; <a href="https://github.com/zenginerler"> Github </a>
             &emsp; &bull; Page Last Updated:
-            <script> document.write(document.lastModified); </script>
+            <script> document.write(document.lastModified);</script>
         </div>
     </footer>
-
 </body>
 
 </html>
