minor html adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <h2 id="welcome_message">
                 I was once a military student, then a psychology student, now I'm trying to be a Full Stack Developer.
-                If you are interested in learning how I ended up here, keep scrolling! --- draft
+                If you are interested in learning how I ended up here, keep scrolling! --- &#128296; draft &#128679;
                 <!-- These sentences will definitely be replaced (!)-->
             </h2>
 
@@ -72,6 +72,60 @@
 
         </div>
     </section>
+
+    <section id="projects">
+        <div class="projects_content">
+
+            <h3> My Projects: </h3>
+            <br>
+            <p>
+                &#128679; Under Development! &#128296;
+            </p>
+
+        </div>
+    </section>
+
+    <section id="resume">
+        <div class="resume_content">
+
+            <h3> Resume: </h3>
+            <br>
+            <p>
+                &#128679; Under Development! &#128296;
+            </p> <br>
+
+            <h3> Education </h3>
+            <p>
+                Donec varius et ipsum vitae hendrerit. Donec maximus in ligula vitae molestie. Praesent id auctor risus,
+                non congue lectus. Cras mollis arcu sed nulla gravida, eu fermentum neque mattis. Etiam velit ipsum,
+                consequat nec euismod eu, ornare condimentum arcu. Pellentesque at ipsum eget turpis pellentesque
+                blandit ut non velit. Vestibulum sagittis et ipsum vel bibendum. Nullam vitae mi sollicitudin, maximus
+                dui in, viverra lectus.
+            </p>
+
+            <h3> Experience </h3>
+            <p>
+                Donec varius et ipsum vitae hendrerit. Donec maximus in ligula vitae molestie. Praesent id auctor risus,
+                non congue lectus. Cras mollis arcu sed nulla gravida, eu fermentum neque mattis. Etiam velit ipsum,
+                consequat nec euismod eu, ornare condimentum arcu. Pellentesque at ipsum eget turpis pellentesque
+                blandit ut non velit. Vestibulum sagittis et ipsum vel bibendum. Nullam vitae mi sollicitudin, maximus
+                dui in, viverra lectus.
+            </p>
+
+            <h3> Skills </h3>
+            <p>
+                Donec varius et ipsum vitae hendrerit. Donec maximus in ligula vitae molestie. Praesent id auctor risus,
+                non congue lectus. Cras mollis arcu sed nulla gravida, eu fermentum neque mattis. Etiam velit ipsum,
+                consequat nec euismod eu, ornare condimentum arcu. Pellentesque at ipsum eget turpis pellentesque
+                blandit ut non velit. Vestibulum sagittis et ipsum vel bibendum. Nullam vitae mi sollicitudin, maximus
+                dui in, viverra lectus.
+            </p>
+        </div>
+    </section>
+
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
 
     <div id="mainContent">
         <div class="contentContainer">
