--- a/index.html
+++ b/index.html
@@ -74,13 +74,9 @@
         <h3> About Me: </h3>
         <br>
         <p>
-          &#128679; Under Development! &#128296;
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-          typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-          sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-          PageMaker including versions of Lorem Ipsum.
+          I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
+          finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
+          individual who enjoys mountain biking &#128690;, charcoal drawing &#9997;, and table tennis &#127955;.
         </p>
         <br>
         <hr>
