--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <br>
         <p>
           &#128679; Under Development! &#128296;
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make a type specimen book. It has survived not only five centuries, &#128679; Under Development! &#128296;
+          I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
+          finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
+          individual who enjoys mountain biking, charcoal drawing, and table tennis. &#128679; Under Development! &#128296;
         </p>
       </div>
 
