--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <li><a class="heading" href="#welcome">Home</a></li>
           <li><a class="heading" href="#aboutMe">About</a></li>
           <li><a class="heading" href="#projects">Projects</a></li>
-          <li><a class="heading" href="#resume">Contact</a></li>
+          <li><a class="heading" href="#resume">Skills</a></li>
+          <li><a class="heading" href="#">Resume</a></li>
         </ul>
       </div>
 
@@ -87,7 +88,8 @@
           &#128679; Under Development! &#128296;
           I am a Software Engineer who likes to solve computational problems in a reliable and secure way, who also
           finds rejoice in simplifying and organizing the complexity. If we exclude my profession, I am an interesting
-          individual who enjoys mountain biking, charcoal drawing, and table tennis. &#128679; Under Development! &#128296;
+          individual who enjoys mountain biking, charcoal drawing, and table tennis. &#128679; Under Development!
+          &#128296;
         </p>
       </div>
 
@@ -261,20 +263,22 @@
       <br><br><br>
       <h4> Education </h4>
       <p>
-        Donec varius et ipsum vitae hendrerit. Donec maximus in ligula vitae molestie. Praesent id auctor risus,
-        non congue lectus. Cras mollis arcu sed nulla gravida, eu fermentum neque mattis. Etiam velit ipsum,
-        consequat nec euismod eu, ornare condimentum arcu. Pellentesque at ipsum eget turpis pellentesque
-        blandit ut non velit. Vestibulum sagittis et ipsum vel bibendum. Nullam vitae mi sollicitudin, maximus
-        dui in, viverra lectus.
+        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an abandoned church. The roof
+        had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
+        He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
+        laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
+        the region, but once an animal had strayed during the night, and the boy had had to spend the entire next day
+        searching for it.
       </p>
 
       <h4> Experience </h4>
       <p>
-        Donec varius et ipsum vitae hendrerit. Donec maximus in ligula vitae molestie. Praesent id auctor risus,
-        non congue lectus. Cras mollis arcu sed nulla gravida, eu fermentum neque mattis. Etiam velit ipsum,
-        consequat nec euismod eu, ornare condimentum arcu. Pellentesque at ipsum eget turpis pellentesque
-        blandit ut non velit. Vestibulum sagittis et ipsum vel bibendum. Nullam vitae mi sollicitudin, maximus
-        dui in, viverra lectus.
+        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an abandoned church. The roof
+        had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
+        He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
+        laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
+        the region, but once an animal had strayed during the night, and the boy had had to spend the entire next day
+        searching for it.
       </p>
 
       <br><br><br><br>
