add google analytics script

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link href="./css/index.css" rel="stylesheet">
   <link href="https://indestructibletype.com/fonts/Jost.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/14218699b6.js" crossorigin="anonymous"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X0C3JBC47Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-X0C3JBC47Z');
+  </script>
 </head>
 
 <body>
@@ -263,7 +271,8 @@
       <br><br><br>
       <h4> Education </h4>
       <p>
-        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an abandoned church. The roof
+        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an
+        abandoned church. The roof
         had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
         He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
         laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
@@ -273,7 +282,8 @@
 
       <h4> Experience </h4>
       <p>
-        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an abandoned church. The roof
+        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an
+        abandoned church. The roof
         had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
         He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
         laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
