--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <li><a class="heading" href="#welcome">Home</a></li>
           <li><a class="heading" href="#aboutMe">About</a></li>
           <li><a class="heading" href="#projects">Projects</a></li>
-          <li><a class="heading" href="#resume">Skills</a></li>
-          <li><a class="heading" href="#">Resume</a></li>
+          <li><a class="heading" href="#resume">Timeline</a></li>
+          <li><a class="heading" href="#">Contact</a></li>
         </ul>
       </div>
 
@@ -199,13 +199,6 @@
         </div>
       </div>
 
-    </div>
-  </section>
-
-
-  <section id="resume">
-    <div class="resume_content">
-
       <h3> Skills: </h3>
       <br>
 
@@ -260,36 +253,72 @@
         </div>
       </div>
 
+    </div>
+  </section>
 
-      <br><br><br><br><br>
-      <br><br><br><br><br>
-      &#128679; Under Development! &#128296;
-      <br><br><br><br>
 
+  <section id="resume">
+    <div class="resume_content">
 
       <h3> Resume </h3>
       <br><br><br>
-      <h4> Education </h4>
-      <p>
-        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an
-        abandoned church. The roof
-        had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
-        He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
-        laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
-        the region, but once an animal had strayed during the night, and the boy had had to spend the entire next day
-        searching for it.
-      </p>
+      &#128679; Under Development! &#128296;
+      <br><br><br>
 
-      <h4> Experience </h4>
-      <p>
-        Lorem Ipsum, Alchemist, The boy's name was Santiago. Dusk was falling as the boy arrived with his herd at an
-        abandoned church. The roof
-        had fallen in long ago, and an enormous sycamore had grown on the spot where the sacristy had once stood.
-        He decided to spend the night there. He saw to it that all the sheep entered through the ruined gate, and then
-        laid some planks across it to prevent the flock from wandering away during the night. There were no wolves in
-        the region, but once an animal had strayed during the night, and the boy had had to spend the entire next day
-        searching for it.
-      </p>
+      <div class="timeline_container">
+        <div class="timeline">
+          <ul>
+            <li id="item1">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item2">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item3">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 3</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item4">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 4</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item5">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 3</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li id="item6">
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 4</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium
+                  voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
 
       <br><br><br><br>
       &#128679; Under Development! &#128296;
